[package]
name = "mix-distribution"
version = "0.1.1"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Mixture distributions"
homepage = "https://crates.io/crates/mix-distribution"
documentation = "https://docs.rs/mix-distribution"
repository = "https://github.com/ordovicia/mix-distribution"
readme = "README.md"

keywords = ["random"]
# categories = []

exclude = [".gitignore", ".travis.yml"]

[badges]
travis-ci = { repository = "ordovicia/mix-distribution" }

[dependencies]
rand = "0.6.0"
