[package]
name = "mix-distribution"
version = "0.3.0"
edition = "2018"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Mixture distributions"
homepage = "https://crates.io/crates/mix-distribution"
documentation = "https://docs.rs/mix-distribution"
repository = "https://github.com/ordovicia/mix-distribution"
readme = "README.md"

keywords = ["random"]
# categories = []

exclude = [".gitignore", ".travis.yml"]

[badges]
travis-ci = { repository = "ordovicia/mix-distribution" }

[dependencies]
rand = "0.8"
rand_distr = "0.4"
